package model;

public class IslandPart extends Placeable{
}
