package model;

public enum PlaceableTypes {
    SHIP,
    TRAP,
    IMPACT
}
