package model.traps;

import model.Cell;

public class BlackHole extends model.traps.Trap{

    public BlackHole(Cell cell){
        super(cell);
    }
}
