package model.weapons;

public class Bomb extends model.weapons.Weapon{
}
