package model.weapons;

public class Missile extends model.weapons.Weapon{
}
