package model.weapons;

public class Sonar extends model.weapons.Weapon{
}
