package model.weapons;

public abstract class Weapon {
}
