package view;
import javax.swing.*;
import java.awt.*;

public class GraphicalView extends JFrame {

}
