@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam linetype ortho
hide enum methods


package model #eeaaff{

    class Game {
        - turnNum : Integer
        +<<create>>Game()
        + setPlayerName(name : String)
        + setGrid(width : Integer, height : Integer, islandMode : Boolean)
        + isTheGameFinished() : Boolean
    }

    class Player {
        - _name : String
        +<<create>>Player(name : String)
        + getName() : String
        + getGrid() : Grid
        + placeShip(ship : Ship)
        + shoot(grid : Grid, cell : Cell, weapon : Weapon)
    }

    class Grid {
        - _width : Integer
        - _height : Integer
        +<<create>>Grid(width : Integer, height : Integer)
        + isOccupied(cell : Cell) : Boolean
        + isHit(cell : Cell) : Boolean
        + placeObject(placeable : Placeable)
        + placeImpact(cell : Cell)
        + shoot(cell : Cell, weapon : Weapon)
        + isThereAliveShips() : Boolean
    }


    enum PlaceableTypes {
        SHIP
        TRAP
        IMPACT
        ISLANDPART
        WEAPON
    }
    abstract Placeable <<abstract>> {
        + getCells() : Cell[*]
        + getType() : PlaceableTypes
    }

    class Impact extends Placeable {
        +<<create>>Impact(cell : Cell)
        + getCells() : Cell[1]
    }

    class IslandPart extends Placeable{
        + <<create>>Island(cell : Cell)
        + getCells() : Cell[1]
        + isThereAnObject() : Boolean
        + getPlacedObject() : Placeable
        + setPlacedObject(placeable : Placeable)
    }

    class Ship extends Placeable {
        + <<create>>Ship(positions : Cell[])
        + getCells() : Cell[*]
        + getLength() : Integer
        + isTheShipHere(position : Cell) : Boolean
        + isHitPart(position : Cell) : Boolean
        + isDead() : Boolean
    }

    package traps #ff4040 {
    abstract Trap <<abstract>> extends model.Placeable {
        +<<create>>Trap(cell : Cell)
        + getCells() : Cell[1]
    }
    class Tornado extends Trap {
        +<<create>>Tornado(cell : Cell)
    }
    class BlackHole extends Trap {
        +<<create>>BlackHole(cell : Cell)
    }
    }

    package weapons #dfdf40 {
        abstract Weapon <<abstract>> extends model.Placeable {
            + <<create>>Weapon()
            + getCells() : Cell[1]
            + setPosition(cell : Cell)
            + execShoot(grid : Grid, cell : Cell)

        }
        class Bomb extends Weapon {
            +<<create>>Bomb()
            + execShoot(grid : Grid, cell : Cell)
        }
        class Missile extends Weapon {
            +<<create>>Missile()
            + execShoot(grid : Grid, cell : Cell)
        }
        class Sonar extends Weapon {
            +<<create>>Sonar()
            + execShoot(grid : Grid, cell : Cell)
        }
        }

    class Cell {
        - _x : Integer
        - _y : Integer
        - _hit : Boolean
        + <<create>>Cell(x : Integer, y : Integer)
        + getX() : Integer
        + getY() : Integer
        + setX(x : Integer)
        + setY(y : Integer)
        + isHit() : Boolean
        + setHit()
    }


}

package controller #6999ff {
    class GameController {
    }
}

package view #99ff99 {
    class TerminalView {
    }

    class GraphicalView {
    }
}


class Main {
}

Placeable *-l-> "1\n- _type" PlaceableTypes : "> has for type"

Ship o--> "*\n- _positions" Cell : "> has for coordinates"
Impact o--> "1\n- _position" Cell : "> has for coordinates"
Trap o--> "1\n# _position" Cell : "> has for coordinates"
IslandPart o--> "1\n- _position" Cell : "> has for coordinates"
Weapon o--> "1\n# _position" Cell : "> has for coordinates"

IslandPart o--> "1\n- _placedObject" Placeable : "> stock a placeable"


Grid o--> "*\n- _placedObjects" Placeable : "> contains"
Player o--> "1\n- _grid" Grid : "> has for grid"
Player o--> "*\n- _weaponInventory" Weapon : "> can use theses weapons"
Player o--> "1\n- _equippedWeapon" Weapon : "> has this strategy of attack"
Game *--> "2\n- _players" Player : "> has 2 players"

GameController o--> "1\n- _model" Game : "> Manipulate"
TerminalView o--> "1\n- _model" Game : "> Consult"
TerminalView o--> "1\n- _controller" GameController : "> Transmit user's demands"

Main ..> Game : "<<uses>>"
Main ..> GameController : "<<uses>>"
Main ..> TerminalView : "<<uses>>"


@enduml
